# legal_nlp

./: .env  .gitignore  LEGAL_NLP_SUMMARY.md  Makefile  README.md  adamwInPytorch.py  architecture.md  article_counter.py  fine-tunning + Ner.tex  gigachat_client.py  implementation_plan.md.resolved  labling_clean_data.py  pravo_scraper_v2.1.py  pravo_scraper_v2.py  prototyping a legal model.md  provider_error_test.py  pyproject.toml  rus_law_scrapper copy.py  rus_law_scrapper.py  saiga_mistral_download.py  saiga_sha256.txt  scraper_config.json  work_ollama_legal.py
.history/.kilocode/rules/: python-MLX-mode copy_20251209202651.md  python-MLX-mode copy_20251209202813.md  python-finetuning-fix_20251209202109.md
.history/scripts/: compute_hashes_20251209090117.py  compute_hashes_20251209100401.py  compute_hashes_20251209101918.py
.history/src/legal_rag/: unified_finetune_v2_20251208191125.py  unified_finetune_v2_20251209181258.py  unified_finetune_v2_20251209181310.py  unified_finetune_v2_20251209181325.py  unified_finetune_v4_20251209164829.py  unified_finetune_v4_20251209181703.py  unified_finetune_v4_20251209181734.py  unified_finetune_v4_20251209181750.py  unified_finetune_v4_20251209181901.py  unified_finetune_v4_20251209181911.py  unified_finetune_v4_20251209181946.py  unified_finetune_v4_20251209181952.py  unified_finetune_v4_20251209182050.py  unified_finetune_v4_20251209182918.py  unified_finetune_v4_20251209182927.py  unified_finetune_v4_20251209183001.py  unified_finetune_v4_20251209183132.py  unified_finetune_v4_20251209183151.py  unified_finetune_v4_20251209191830.py  unified_finetune_v4_20251209191952.py  unified_finetune_v4_20251209194327.py  unified_finetune_v4_20251209194612.py  unified_finetune_v4_20251209215413.py  unified_finetune_v4_all_errors_fixed_20251209223505.py  unified_finetune_v4_all_errors_fixed_20251209231725.py  unified_finetune_v4_completely_fixed_20251209221235.py  unified_finetune_v4_final_fixed_20251209215518.py  unified_finetune_v4_fixed_20251209203108.py  unified_finetune_v4_fixed_20251209203745.py  unified_finetune_v4_memory_optimized_20251209222007.py  unified_finetune_v4_mps_optimized_20251209232654.py  unified_finetune_v4_safe_20251210000629.py  unified_finetune_v4_ultimate_20251209195119.py  unified_finetune_v4_unrestricted_mps_20251210000126.py  unified_finetune_v5_20251210010427.py  unified_finetune_v5_20251210010514.py  (+6 more)
.kilocode/rules/: finetune() - (PyTorch-brranch).md
DB/: build_faiss_index.py
data/evaluation/: evaluation_results.json  legal_test_set.xlsx
data/training/: test.json
data_v1.0/data/: article_counter.py  gk_rf_articles.json  jk_rf_articles.json  nk_rf_articles.json  tk_rf_articles.json
data_v1.0/data copy/: Тест-сет оценки моделей.xlsx
data_v1.0/data_processing/: diagnose_eof.py  merge_data.py  mock_data_generator.py  prepare_training_data.py
scripts/: avg_article_length.py  check_hashsum_models.py  check_health_datasets.py  check_health_ds_v1.4.py  clean_dataset.py  compute_hashes.py  evaluate_legal_responses.py  preprocess_sft_pipeline.py  saiga_mistral_download 2.py  saiga_mistral_download.py  scraper.py
src/legal_rag/: chunking_dataset_saiga_llama3_8b.py  count_stats.py  fine_tuning_saiga.py  finetune_qlora.py  finetune_qlora_4b.py  label_articles.py  preprocess.py  rag_system.py  unified_finetune.py  unified_finetune_safe.py  unified_finetune_v2.0.py  unified_finetune_v2.py  unified_finetune_v3.py  unified_finetune_v4.1.py  unified_finetune_v4.2.py  unified_finetune_v4_clean.py  unified_finetune_v4_completely_fixed.py  unified_finetune_v4_extreme_mps_optimized.py  unified_finetune_v4_final.py  unified_finetune_v4_final_working.py  unified_finetune_v4_memory_optimized.py
src/scrapers/: base.py  build_case_article_json_dataset.py  corrected_legal_scraper.py  process_dataset.py  smart-scraper.py  smart-scraper_v1.0.py  smart-scraper_v1.3.py  smart-scraper_v1.6.py  sudact.py  unified_scraper.py  zakonrf.py
tests/: README.md  __init__.py  conftest.py  test_preprocessing.py  test_rag_system.py  test_scrapers.py
(+101 files in other folders)
