[project]
name = "legal_rag"
version = "0.1.0"
requires-python = ">=3.11,<3.13"

description = "Legal RAG + LLM system"
authors = [{name = "Anton Amadeus", email = "amadey1110@gmail.com"}]

dependencies = [
    "chromadb>=0.5",
    "langchain>=0.3",
    "langchain-community",
    "langchain-huggingface",
    "sentence-transformers",
    "pydantic-settings",
    "beautifulsoup4",
    "playwright",
    "streamlit>=1.38",
    "ragas",
    "transformers>=4.44",
    "datasets>=2.19",
    "peft>=0.11",
    "accelerate>=0.33",
    "huggingface_hub",
    "tqdm",
    "torch>=2.3",
    "pymorphy2", 
    "nltk"
]

[project.optional-dependencies]
finetune = [
    # CUDA (Linux/Windows Ñ NVIDIA)
    "unsloth[cu121-torch240]>=2024.10; platform_system != 'Darwin'",
    # Apple Silicon M1/M2/M3/M4
    "mlx>=0.17; platform_system == 'Darwin'",
    "mlx-lm>=0.17; platform_system == 'Darwin'",

    "bitsandbytes>=0.43; platform_system != 'Darwin'",
    "sentencepiece",
    "trl>=0.9",
]

dev = ["ruff", "black", "pytest", "pytest-cov", "pre-commit"]

[tool.hatch.build.targets.wheel]
packages = ["src/legal_rag", "src/scrapers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src", "scripts"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"